force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction_Master__c/BMCServiceDesk__Normalization_Transaction_Master__c.object-meta.xml
<CustomObject>
    <description>Stores unique values that do not match the normalized values defined in normalization rules.</description>
    <label>Normalization Transaction Master</label>
    <nameField>
        <displayFormat>TransactionMaster-{00000}</displayFormat>
        <label>Normalization Transaction Master</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Normalization Transaction Master</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>