force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction_Master__c/fields/BMCServiceDesk__Approved_By__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Normalization_Transaction_Master</relationshipName>
    <type>Lookup</type>
</CustomField>