force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction_Master__c/fields/BMCServiceDesk__Approved_DateTime__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Approved_DateTime__c</fullName>
    <label>Approved DateTime</label>
    <type>DateTime</type>
</CustomField>