force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction_Master__c/fields/BMCServiceDesk__Exception_Age__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Exception_Age__c</fullName>
    <description>This formula field calculates the time based on the current date minus the date when the exception was generated</description>
    <formula>ROUND((NOW()- CreatedDate),0)</formula>
    <label>Exception Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>