force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction_Master__c/fields/BMCServiceDesk__Field_Value__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Field_Value__c</fullName>
    <label>Field_Value</label>
    <type>TextArea</type>
</CustomField>