force-app/main/default/objects/BMCServiceDesk__Normalization_Transaction_Master__c/fields/BMCServiceDesk__FKCMDB_Class__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKCMDB_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CMDB Class</label>
    <referenceTo>BMCServiceDesk__CMDB_Class__c</referenceTo>
    <relationshipLabel>CMDB Class</relationshipLabel>
    <relationshipName>CMDB_Class</relationshipName>
    <type>Lookup</type>
</CustomField>